Convert CText Cropped to CTextBox
- remove cropping setting for CText
- remove scrollAmount from CText
- convert DrawCTextFormatted to DrawCText
- update and rename test
- Rename DrawCTextCropped to DrawCTextBox

--- a/test/elements/components/textbox/makefile
+++ b/test/elements/components/textbox/makefile
@@ -23,7 +23,7 @@
 
 # -- CONFIGURATION --
 # paths
-EXE_NAME ?= test_input
+EXE_NAME ?= test_textbox
 DESTDIR ?= ./
 SRC ?= main.cpp ../../../../src/Core.cpp ../../../../src/GUI.cpp
 OBJS = $(patsubst %.c, %.o, $(SRC))
